src/style.css
:root {
    --bg-color: #ffffff;
    --pre-black: #363e45;
    --gray-text: rgba(54, 62, 69, 0.64);
    --gray-back: rgba(152, 163, 174, 0.12);
    --button-back: #2F3337;
    --content-width: 1140px;
    --content-half-width: 554px;
    --info-container-height: 400px;
    --h1-font-size: 48px;
    --h3-font-size: 20px;
    --sm-text-font-size: 14px;
    --text-font-size: 16px;
    --font-weight: 400;
    --item-border: 1px solid rgba(152, 163, 174, 0.48);
    --border-radius: 8px;
}

body {
    font-family: "Arial";
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0;
}

.Content {
    width: var(--content-width);
    background-color: var(--bg-color);
    display: flex;
    flex-direction: column;
    gap: 64px;
}


.menu {
    display: flex;
    gap: 8px;
}

.menu-button {
    padding: 16px 20px;
    border: var(--item-border);
    border-radius: var(--border-radius);
    height: 48px;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    background-color: var(--bg-color);
}

.menu-label {
    font-size: var(--sm-text-font-size);
    font-weight: var(--font-weight);
    color: var(--pre-black);
    text-align: center;
}

.image-container {
    overflow: hidden;
    border-radius: var(--border-radius);
}

.section-header {
    font-size: var(--h1-font-size);
    font-weight: var(--font-weight);
    color: var(--pre-black);
    line-height: 48px;
    margin: 0;
}

.label-header {
    font-size: var(--text-font-size);
    font-weight: var(--font-weight);
    line-height: 24px;
    color: var(--pre-black);
}

.mini-header {
    font-size: var(--h3-font-size);
    color: var(--pre-black);
}

.info-text {
    font-size: var(--text-font-size);
    font-weight: var(--font-weight);
    color: var(--gray-text);
    line-height: 24px;
    margin: 0;
    padding-bottom: 16px;
}

.title-location {
    display: flex;
    flex-direction: column;
    gap: 8px;

    .title {
        font-size: var(--h3-font-size);
        color: var(--pre-black);
        padding-bottom: 0;
    }
}


/* header */
#header {
    display: flex;
    justify-content: space-between;
    padding: 24px 0;
}


/* about */
#about {
    display: flex;
    flex-direction: column;
    gap: 40px;

    .section-header {
        line-height: 58px;
        white-space: pre-line;
    }

    .image-container {
        width: var(--content-width);
        height: var(--info-container-height);

        img {
            width: 100%;
            height: 100%;
            object-fit: cover;
        }
    }
}


/* education */
#education {
    display: flex;
    flex-direction: column;
    gap: 40px;
    justify-content: space-between;

    .info {
        display: flex;
        justify-content: space-between;
        width: var(--content-width);
        height: 352px;

        .column {
            display: flex;
            flex-direction: column;
            justify-content: space-between;
            width: var(--content-half-width);
        }
    }
}

.education-info-block {
    display: flex;
    flex-direction: column;
    gap: 16px;

    .period {
        color: var(--pre-black);
    }
}


/* experience */
#experience {
    display: flex;
    flex-direction: column;
    gap: 40px;
}

.experience-info {
    display: flex;

    .text {
        display: inline-block;
        flex-direction: column;
        width: var(--content-half-width);
        gap: 16px;

        .period {
            color: var(--pre-black);
        }
    }

    .image-container {
        width: var(--content-half-width);
        height: var(--info-container-height);
        margin-left: 32px;

        img {
            width: 100%;
            height: 100%;
            object-fit: cover;
        }
    }
}


/* skills */
#skills {
    display: flex;
    flex-direction: column;
    gap: 40px;
    justify-content: space-between;

    .skill-bars {
        display: flex;
        justify-content: space-between;
        width: var(--content-width);
        height: var(--info-container-height);

        .column {
            display: flex;
            flex-direction: column;
            justify-content: space-between;
            width: var(--content-half-width);
        }
    }

    .add-skill-form {
        display: flex;
        flex-direction: column;
        background-color: var(--gray-back);
        border: none;
        border-radius: var(--border-radius);
        height: 200px;

        .form-header {
            padding: 16px 0 16px 32px;
        }
    }
}

.bar-item {
    display: flex;
    flex-direction: column;
    gap: 16px;
    height: 80px;
    padding: 16px 0;

    .bar-back {
        width: var(--content-half-width);
        height: 8px;
        background-color: var(--gray-back);
        border-radius: 4px;

        .bar-fore {
            height: 8px;
            background-color: var(--pre-black);
            border-radius: 4px;
        }

        #react           { width: 90%; }
        #angular         { width: 70%; }
        #html-css        { width: 100%; }
        #javascript      { width: 20%; }
        #python          { width: 25%; }
        #soft-skill      { width: 80%; }
        #motion-graphics { width: 60%; }
        #ux              { width: 20%; }
        #ui              { width: 50%; }
        #three-d         { width: 25%; }
    }
}

.form-container {
    display: flex;
    align-items: flex-end;
    justify-content: space-between;
    padding: 0 0 16px 32px;
    gap: 16px;
    width: 1076px;

    .form-field {
        display: flex;
        flex-direction: column;
        flex: 1;
        gap: 8px;

        .form-input {
            border: var(--item-border);
            border-radius: var(--border-radius);
            height: 48px;
        }
    }

    .add-button {
        width: 65px;
        height: 48px;
        border: none;
        border-radius: var(--border-radius);
        padding: 16px 20px;

        background-color: var(--button-back);
        color: white;

        display: flex;
        text-align: center;
        align-items: center;
    }
}


/* contacts */
#contacts {
    display: flex;
    flex-direction: column;
    gap: 40px;
    justify-content: space-between;

    .contacts-row {
        display: flex;
        gap: 32px;
        height: var(--info-container-height);
        width: var(--content-width);

        .contact-container {
            background-color: var(--gray-back);
            border: none;
            border-radius: var(--border-radius);
            flex: 1;

            display: flex;
            flex-direction: column;
            justify-content: space-between;

            .contact-icon {
                width: 40px;
                height: 40px;
                padding: 32px 0 0 32px;
            }

            .title-location {
                padding: 0 0 16px 32px;
            }
        }
    }
}


/* footer */
#footer {
    display: flex;
    justify-content: space-between;
    padding: 60px 0;

    .social-media {
        display: flex;
        gap: 32px;

        .social-link {
            padding: 2px 2px;

            .social-icon {
                width: 20px;
                height: 20px;
            }
        }
    }

    .copyright {
        font-size: var(--sm-text-font-size);
        font-weight: var(--font-weight);
        color: var(--gray-text);
        margin: 0;
    }
}

